[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Set Creator/Boss Type Text.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss Type Dropdown Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Set Creator/Questions Label.png" type="Texture" id=3]
[ext_resource path="res://Assets/Set Creator/Answers Label.png" type="Texture" id=4]
[ext_resource path="res://Assets/Set Creator/Import Set Button (Hover).png" type="Texture" id=5]
[ext_resource path="res://Assets/Set Creator/Import Set Button (Pressed).png" type="Texture" id=6]
[ext_resource path="res://Assets/Set Creator/Import Set Button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Set Creator/Create Set Button (Hover).png" type="Texture" id=8]
[ext_resource path="res://Assets/Set Creator/Back to Home Button.png" type="Texture" id=9]
[ext_resource path="res://Assets/Set Creator/Back to Home Button (Pressed).png" type="Texture" id=10]
[ext_resource path="res://Assets/Set Creator/Back to Home Button (Hover).png" type="Texture" id=11]
[ext_resource path="res://Assets/Set Creator/Create Set Button.png" type="Texture" id=12]
[ext_resource path="res://Assets/Set Creator/Create Set Button (Pressed).png" type="Texture" id=13]
[ext_resource path="res://Scenes/Copy&Paste.gd" type="Script" id=14]
[ext_resource path="res://Assets/Set Creator/Copy&Paste Label.png" type="Texture" id=15]

[node name="Set Creator" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Boss Type" type="HBoxContainer" parent="."]
margin_left = 381.0
margin_right = 643.0
margin_bottom = 56.0
size_flags_horizontal = 6

[node name="Boss Dropdown" type="MenuButton" parent="Boss Type"]
margin_right = 262.0
margin_bottom = 56.0
icon = ExtResource( 1 )

[node name="Labels for Q&A" type="HBoxContainer" parent="."]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 110.0

[node name="Questions Label Container" type="HBoxContainer" parent="Labels for Q&A"]
margin_left = 130.0
margin_right = 380.0
margin_bottom = 50.0
size_flags_horizontal = 6

[node name="Q Label" type="TextureRect" parent="Labels for Q&A/Questions Label Container"]
margin_right = 250.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="Answers Label Container" type="HBoxContainer" parent="Labels for Q&A"]
margin_left = 644.0
margin_right = 894.0
margin_bottom = 50.0
size_flags_horizontal = 6

[node name="A Label" type="TextureRect" parent="Labels for Q&A/Answers Label Container"]
margin_right = 250.0
margin_bottom = 50.0
texture = ExtResource( 4 )

[node name="Question 1" type="HBoxContainer" parent="."]
margin_top = 114.0
margin_right = 1024.0
margin_bottom = 144.0

[node name="Left Side (Prompts)" type="HBoxContainer" parent="Question 1"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Prompt" type="LineEdit" parent="Question 1/Left Side (Prompts)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Question Here"

[node name="Right Side (Answers)" type="HBoxContainer" parent="Question 1"]
margin_left = 694.0
margin_right = 844.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Answer" type="LineEdit" parent="Question 1/Right Side (Answers)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Answer Here"

[node name="Question 2" type="HBoxContainer" parent="."]
margin_top = 148.0
margin_right = 1024.0
margin_bottom = 178.0

[node name="Left Side (Prompts)" type="HBoxContainer" parent="Question 2"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Prompt" type="LineEdit" parent="Question 2/Left Side (Prompts)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Question Here"

[node name="Right Side (Answers)" type="HBoxContainer" parent="Question 2"]
margin_left = 694.0
margin_right = 844.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Answer" type="LineEdit" parent="Question 2/Right Side (Answers)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Answer Here"

[node name="Question 3" type="HBoxContainer" parent="."]
margin_top = 182.0
margin_right = 1024.0
margin_bottom = 212.0

[node name="Left Side (Prompts)" type="HBoxContainer" parent="Question 3"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Prompt" type="LineEdit" parent="Question 3/Left Side (Prompts)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Question Here"

[node name="Right Side (Answers)" type="HBoxContainer" parent="Question 3"]
margin_left = 694.0
margin_right = 844.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Answer" type="LineEdit" parent="Question 3/Right Side (Answers)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Answer Here"

[node name="Question 4" type="HBoxContainer" parent="."]
margin_top = 216.0
margin_right = 1024.0
margin_bottom = 246.0

[node name="Left Side (Prompts)" type="HBoxContainer" parent="Question 4"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Prompt" type="LineEdit" parent="Question 4/Left Side (Prompts)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Question Here"

[node name="Right Side (Answers)" type="HBoxContainer" parent="Question 4"]
margin_left = 694.0
margin_right = 844.0
margin_bottom = 30.0
size_flags_horizontal = 6

[node name="Answer" type="LineEdit" parent="Question 4/Right Side (Answers)"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
rect_pivot_offset = Vector2( 75, 15 )
text = "Type Answer Here"

[node name="Copy&Paste" type="Popup" parent="."]
visible = true
margin_top = 250.0
margin_right = 1024.0
margin_bottom = 250.0
script = ExtResource( 14 )

[node name="InstructionsContainer" type="VBoxContainer" parent="Copy&Paste"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Instructions" type="TextureRect" parent="Copy&Paste/InstructionsContainer"]
margin_right = 750.0
margin_bottom = 50.0
texture = ExtResource( 15 )

[node name="Quizlet Text Container" type="VBoxContainer" parent="Copy&Paste"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Quizlet Text" type="LineEdit" parent="Copy&Paste/Quizlet Text Container"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Last Row" type="HBoxContainer" parent="."]
margin_top = 382.0
margin_right = 1024.0
margin_bottom = 472.0
size_flags_vertical = 6

[node name="Go Back Column" type="HBoxContainer" parent="Last Row"]
margin_right = 104.0
margin_bottom = 90.0

[node name="Go Back Button" type="TextureButton" parent="Last Row/Go Back Column"]
margin_right = 104.0
margin_bottom = 90.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Finish Button Column" type="HBoxContainer" parent="Last Row"]
margin_left = 394.0
margin_right = 564.0
margin_bottom = 90.0
size_flags_horizontal = 10

[node name="Create Set Button" type="TextureButton" parent="Last Row/Finish Button Column"]
margin_right = 170.0
margin_bottom = 90.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 8 )

[node name="Import Button Column" type="HBoxContainer" parent="Last Row"]
margin_left = 854.0
margin_right = 1024.0
margin_bottom = 90.0
size_flags_horizontal = 10

[node name="Import Set Button" type="TextureButton" parent="Last Row/Import Button Column"]
margin_right = 170.0
margin_bottom = 90.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[connection signal="ready" from="Boss Type/Boss Dropdown" to="." method="_on_Boss_Dropdown_ready"]
[connection signal="about_to_show" from="Copy&Paste" to="Copy&Paste" method="_on_CopyPaste_about_to_show"]
[connection signal="pressed" from="Last Row/Go Back Column/Go Back Button" to="." method="_on_Go_Back_Button_pressed"]
[connection signal="pressed" from="Last Row/Finish Button Column/Create Set Button" to="." method="_on_Create_Set_Button_pressed"]
[connection signal="pressed" from="Last Row/Import Button Column/Import Set Button" to="Copy&Paste" method="_on_Import_Set_Button_pressed"]
